alignment fix

--- a/src/app/dashboard-container/dashboard-container.component.scss
+++ b/src/app/dashboard-container/dashboard-container.component.scss
@@ -11,7 +11,7 @@ section {
   
   .section-title {
     text-align: center;
-    padding-top: 95px;
+    padding-top: 50px;
     padding-bottom: 30px;
   }
   
