--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -4,7 +4,9 @@ $baseColor: #009cea;
 .mobile-nav {
     position: fixed;
 }
-
+.align-items-center{
+  height: 50px;
+}
 ::ng-deep .me-auto .dl-logo {
     #dapplooker-logo-with-text {
         height: 225px;
@@ -98,6 +100,8 @@ $baseColor: #009cea;
         #dapplooker-logo-with-text {
             height: 200px;
             width: 200px;
+            height: 50px;
+            margin-bottom: 150px;
         }
     }
     ::ng-deep .discord_icon {
